# Rec_ONCF

./: .env.example  .gitignore  CLAUDE.md  DATA_SOURCES_SCHEMA.json  LICENSE  ML_HANDOFF.md  README.md  notes.md  orga.md  pyproject.toml  rapport_ancien.tex  rapport_ancien2.tex  rapport_figures_specs.txt  rapport_pfa.tex  rapport_pfa_v2.tex  requirements.txt  test.md
.claude/: settings.json  settings.local.json
.github/workflows/: tests.yml
apps/api/: main.py
configs/: privacy.md
deploy/: .dockerignore  .env.example  Dockerfile  docker-compose.yml
docs/: guide_deploiement.tex
scripts/: 01_make_dataset.py  02_build_features.py  03_train_ranker.py  04_baselines.py  05_build_cold_start.py  06_export_onnx.py  07_retrain.py  08_build_popularity.py  09_train_challenger.py  10_promote_challenger.py  11_build_schedule_index.py  12_simulate_daily_retrain.py  12a_extract_test1_days.py  _bench_api.py  _doc_gen.py  _fix_encoding.py  _profile_latency.py  generate_data_pdf.py  generate_extra_figures.py  generate_figures.py  generate_report_figures.py  retrain_job.bat
src/rec_oncf/: candidates.py  cleaning.py  cold_start.py  config.py  io.py  (+10 more)
tasks/: oncf_daily_retrain.xml
tests/: test_api.py  test_candidates.py  test_cleaning.py  test_cold_start.py  test_dataset_extra_csv.py  test_extract_days.py  test_features.py  test_health_enriched.py  test_local_schedule.py  test_metrics.py  test_ml.py  test_onnx.py  test_pipeline.py  test_popularity.py  test_recommender.py  test_retrain.py  test_retrain_data_contract.py  test_schedule.py  test_simulation.py  test_training.py
(+24 files in other folders)
